 * @list attribute would show duplicates for aliases. [MG]
 * insert(,foo,-1) no longer appends an extra delimiter. [MG]
 * @function/clone didn't work correctly, and could potentially cause
   a crash. [MG]
 * @clone didn't respect Many_Attribs. [MG]
 * Making a connection to a ssl port on a game not using ssl_slave
   could hang the mush. Reported by Minion. [SW]

Commands:
 * @edit/regexp[/all][/nocase], command version of regedit[all][i]().
   Suggested by Minion. [MG]
 * The @sql command no longer uses UNIMPLEMENTED_COMMAND when SQL
   support is not compiled into the MUSH. Instead, it just reports
   that no SQL db is available, like @mapsql does. [MG]

Functions:
 * version() now reports svn revision/date where available. Patch by
   Padraic.
 * ldelete(), replace(), elements() and extract() now accept negative
   position arguments, to count backwards from the end of the list,
   similar to insert(). Suggested by Minion. [MG]
 * replace() now takes an optional output separator. [MG]
 * regmatch() now returns an error for invalid regexps, whether you're
   storing subpattern matches or not. Reported by Sketch. [MG]
 * time(), timefmt() and convsecs() can use symbolic timezones
   (US/Pacific, EST, etc.) if the host server has a time zone database
   installed. [SW]
 * playermem() and objmem() are smarter about calculating space being
   used by atributes [SW]
   
Version 1.8.5 patchlevel 0                                 Feb 12, 2012

Major changes:
 * The PCRE library is now required to build Penn, instead of falling
   back to an old, buggy version formerly bundled with the MUSH. [SW]
   Daniko assisted greatly with Windows changes and documentation.
 * The OpenSSL library is now required to build Penn. Again, Daniko has
   provided instructions for installing on Windows. [SW]
 * A new command prefix, "}", enables debug for a single execution of the
   command  - }think foo, }+who, etc. See 'help }' for more info. Suggested
   by Wiggles and [GM]. [MG]
